- Redid the implementation of QWebPage::createWindow yet again. Hopefully for the last time. - Added a fake QWebPage implementation to properly handle creation of new Windows through   javascript whenever the returned KPart is a non kwebkitpart. - Added slot to handle all the *VisibilityChangeRequested(bool) signals from QWebPage. - Added slot to handle the printRequested signal from QWebPage. - Moved three slots from WebPage to KWebKitPartPrivate.

BUG:258367